--- a/index.html
+++ b/index.html
@@ -142,6 +142,7 @@
         window.onload = () => {
           let gameCoordinator = new GameCoordinator();
         }
+        console.log("game loaded");
       </script>
     </div>
   </body>
