--- a/index.html
+++ b/index.html
@@ -140,8 +140,7 @@
 
       <script>
         window.onload = () => {
-          let gameCoordinator = await new GameCoordinator();
-          console.log("game loaded");
+          let gameCoordinator = new GameCoordinator();
         }
       </script>
     </div>
